<?xml version="1.0"?>
<package format="3">
  <name>arm_servo_controller</name>
  <version>0.0.1</version>
  <description>ROS 2 hardware interface for multi-joint servo arm</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>motion_sdk</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
